--- a/class/minio.yml
+++ b/class/minio.yml
@@ -1,5 +1,11 @@
 parameters:
   kapitan:
+    dependencies:
+      - type: helm
+        output_path: dependencies/minio/helmcharts/minio
+        source: https://helm.min.io
+        version: ${minio:charts:minio}
+        chart_name: minio
     compile:
       - input_paths:
           - minio/component/app.jsonnet
@@ -9,3 +15,12 @@ parameters:
           - minio/component/main.jsonnet
         input_type: jsonnet
         output_path: minio/
+      - output_path: minio/10_minio_helmchart
+        input_type: helm
+        output_type: yaml
+        input_paths:
+          - minio/helmcharts/minio
+        helm_values: ${minio:helmValues}
+        helm_params:
+          release_name: minio
+          namespace: '${minio:namespace}'
